Fix project attribute label icon alignment

--- a/app/components/open_project/common/attribute_label_component.sass
+++ b/app/components/open_project/common/attribute_label_component.sass
@@ -30,5 +30,6 @@
   display: inline
 
   > .op-attribute-help-text
+    display: inline-flex
+    align-items: center
     margin-left: var(--base-size-6)
-    vertical-align: top
